target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
    app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
  labels:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: hello-bit
spec:
  ports:
    - name: http
      port: 80
      targetPort: 6653
  selector:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
    app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
  labels:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: hello-bit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-bit
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
        app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
      labels:
        app.kubernetes.io/name: hello-bit
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ogux/hello-bit:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: hello-bit
          ports:
            - containerPort: 6653
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
    app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
  labels:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: hello-bit
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: hello-bit
                port:
                  name: http
            path: /
            pathType: Prefix
