target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
    app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
  labels:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: hello-bit
spec:
  ports:
    - name: http
      port: 80
      targetPort: 6653
  selector:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
    app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: hello-bit
    app.openshift.io/runtime: quarkus
  name: hello-bit
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
        app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: hello-bit
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_HOME
              value: /home/quarkus/
            - name: QUARKUS_OPTS
              value: -Dquarkus.http.host=0.0.0.0
          image: ogux/hello-bit:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: hello-bit
          ports:
            - containerPort: 6653
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - hello-bit
        from:
          kind: ImageStreamTag
          name: hello-bit:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 7eef04861d56b51f04939027a40bcfd25007dad6
    app.quarkus.io/build-timestamp: 2022-01-05 - 09:44:33 +0000
  labels:
    app.kubernetes.io/name: hello-bit
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: hello-bit
spec:
  port:
    targetPort: 6653
  to:
    kind: Service
    name: hello-bit
